# cv.bause.dev

./: Cargo.toml  README.md  config.toml
.github/workflows/: build.yml  dockerize.yml
assets/bootstrap-5.1.3/: package.json
assets/bootstrap-5.1.3/site/assets/scss/: docs.scss
assets/scss/: devresume.scss
assets/scss/bootstrap/js/tests/: karma.conf.js
assets/scss/bootstrap/js/tests/integration/: bundle.js  index.html
assets/scss/bootstrap/js/tests/visual/: alert.html  button.html  carousel.html  collapse.html  dropdown.html  modal.html  popover.html  scrollspy.html  tab.html  toast.html  tooltip.html
backend/: Cargo.toml
backend/src/: main.rs
cv-frontend/: Cargo.toml  index.html  index.scss
cv-frontend/src/: app.rs  contact_list.rs  experience.rs  footer.rs  intro.rs
deploy/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
frontend/: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  index.html
frontend/src/: app.rs  experience.rs  footer.rs  intro.rs  main.rs  work_section.rs
layouts/partials/: awards.html  footer.html  head.html  header.html  profile.html  summary.html
