[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
description = "CV written in yew"
readme = "README.md"
repository = "https://github.com/aspeteRakete/cv.bause.dev"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.20"
yew_icons = {version = "0.7.0", features = ["FeatherMail", "FeatherGlobe", "FeatherMapPin", "BootstrapGithub", "BootstrapLinkedin", "BootstrapTwitter"]}